[package]
name = "twizzler-rt-abi"
version = "0.99.1"
edition = "2021"

[lib]
# We only need to statically link this library, since it has a small footprint and only really matters when feature runtime is on.
# And when that's true, we are statically linking _start and friends from this crate into the executable, or into libstd.
crate-type = ["rlib"]

[dependencies]
# This is the last version that includes the feature flag that allows this crate to be
# used by the standard library (https://github.com/bitflags/bitflags/pull/454).
bitflags = "=2.9.1"
twizzler-types = { path = "../types" }

# We depend on some usually built-in crates here. In particular is we need to adhere to this "rustc-std-workspace-core"
# semi-feature (https://github.com/rust-lang/wg-cargo-std-aware/issues/51).
#[dependencies.compiler_builtins]
#optional = true
#version = "0.1.160"

[dependencies.core]
optional = true
package = "rustc-std-workspace-core"
version = "1.0.0"

[features]
# Activate if compiling as part of libstd.
rustc-dep-of-std = [
    "core",
    #"compiler_builtins/rustc-dep-of-std",
    "bitflags/core",
    "twizzler-types/rustc-dep-of-std",
]

stderr = []
kernel = []
rt0 = []
#default = ["rt0", "stderr"]
